--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,3 +1,82 @@
 /*
  *	CUSTOM SCSS
  */
+
+ /* Imports */
+
+// @import "html5-bp";
+@import "compass/css3";
+@import "compass/reset";
+@import "compass/layout";
+@import "vars";
+@import "responsive";
+@import "overrides";
+@import "typography";
+@import "navbar";
+@import "sections";
+@import "pages";
+
+body {
+    overflow-x: hidden;
+    padding-top:        0px;
+    background-color:   #666;
+    @include background(image-url("bg/stripes.png") #000);
+    // @include background(image-url("bg/bg-black.jpg") #000);
+}
+header {
+    // margin-bottom: 30px;
+}
+.wrap {
+    padding-top: 180px;
+    height: 100%;
+}
+.single {
+    .wrap {
+        padding-top: 270px;
+    }
+}
+.content{
+    margin-left: 15px;
+    margin-right: 15px;
+    @include max_tablet {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+.btn {
+    margin: 30px 0;
+    a {
+        text-transform: uppercase;
+        color: white;
+        &:hover {
+            color: white;
+            text-decoration: none;
+        }
+    }
+}
+
+.pad-content {
+    padding: 10px 0;
+}
+.pad-none {
+    padding: 0;
+}
+
+/* IE 'browse happy' */
+.browsehappy {
+    margin:     0.2em 0;
+    background: #ccc;
+    color:      #000;
+    padding:    0.2em 0;
+}
+
+#root-footer, #footer {
+    height: 30px;
+    p {
+        color: #666;
+    }
+}
+#footer {
+    // background-color: #000;
+}
+@include sticky-footer(30px, "#root", "#root-footer", "#footer")
