--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -897,57 +897,62 @@ body {
   background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes.png?1385804855') black;
 }
 
-/* line 29, ../scss/custom.scss */
+/* line 25, ../scss/custom.scss */
 .wrap {
   padding-top: 180px;
   height: 100%;
 }
 
-/* line 34, ../scss/custom.scss */
+/* line 30, ../scss/custom.scss */
 .single .wrap {
   padding-top: 270px;
 }
 
-/* line 38, ../scss/custom.scss */
+/* line 34, ../scss/custom.scss */
+.main-content-inner {
+  padding-top: 70px;
+}
+
+/* line 37, ../scss/custom.scss */
 .content {
   margin-left: 15px;
   margin-right: 15px;
 }
 @media only all and (max-width: 767px) {
-  /* line 38, ../scss/custom.scss */
+  /* line 37, ../scss/custom.scss */
   .content {
     margin-left: 0;
     margin-right: 0;
   }
 }
 
-/* line 46, ../scss/custom.scss */
+/* line 45, ../scss/custom.scss */
 .btn {
   margin: 30px 0;
 }
-/* line 48, ../scss/custom.scss */
+/* line 47, ../scss/custom.scss */
 .btn a {
   text-transform: uppercase;
   color: white;
 }
-/* line 51, ../scss/custom.scss */
+/* line 50, ../scss/custom.scss */
 .btn a:hover {
   color: white;
   text-decoration: none;
 }
 
-/* line 58, ../scss/custom.scss */
+/* line 57, ../scss/custom.scss */
 .pad-content {
   padding: 10px 0;
 }
 
-/* line 61, ../scss/custom.scss */
+/* line 60, ../scss/custom.scss */
 .pad-none {
   padding: 0;
 }
 
 /* IE 'browse happy' */
-/* line 66, ../scss/custom.scss */
+/* line 65, ../scss/custom.scss */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -955,11 +960,11 @@ body {
   padding: 0.2em 0;
 }
 
-/* line 73, ../scss/custom.scss */
+/* line 72, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 75, ../scss/custom.scss */
+/* line 74, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
