--- a/assets/scss/_overrides.scss
+++ b/assets/scss/_overrides.scss
@@ -5,6 +5,12 @@
     outline: -webkit-focus-ring-color auto 0;
 }
 
+a{
+    color: $blue;
+    &:hover {
+        color: $cyan;
+    }
+}
 a:hover {
     text-decoration: none !important;
 }
@@ -42,5 +48,5 @@ pre {
     margin: 30px 0;
 }
 time {
-	color: $red;
+	color: #999;
 }
