--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -52,6 +52,12 @@ h1 {
     span {
         // color: $red;
     }
+    a{
+        color: $cyan;
+        &:hover {
+            color: white;
+        }
+    }
 }
 h2 {
     // @extend %redtape;
@@ -80,6 +86,12 @@ h3 {
 h3 {
     font-size: 130%;
     @include single-text-shadow;
+}
+a{
+    @include transition(color, 0.25s);
+    &:hover{
+        @include transition(color, 0.25s);
+    }
 }
 p {
     color:          #aaa;
