--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -32,7 +32,10 @@ body {
     }
 }
 .main-content-inner {
-    padding-top: 70px;
+    padding: 70px 0 30px 0;
+    @include min_tablet {
+        padding: 70px 15px 30px 15px;
+    }
 }
 .content{
     margin-left: 15px;
