--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,7 +115,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.single-portfolio .image, .thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -166,20 +166,21 @@ a:hover {
 .page-header {
   border: 0;
   margin: 40px 0 0;
+  padding-bottom: 0;
 }
 
-/* line 36, ../scss/_overrides.scss */
+/* line 37, ../scss/_overrides.scss */
 .post {
   margin: 0 0 20px 0;
 }
 
-/* line 46, ../scss/_overrides.scss */
+/* line 47, ../scss/_overrides.scss */
 pre {
   color: #666;
   margin: 30px 0;
 }
 
-/* line 50, ../scss/_overrides.scss */
+/* line 51, ../scss/_overrides.scss */
 time {
   color: #999;
 }
@@ -227,7 +228,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.single-portfolio .image, .thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -525,7 +526,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.single-portfolio .image, .thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -734,7 +735,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.single-portfolio .image, .thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -806,28 +807,29 @@ code, pre, .highlight {
 .single-portfolio .wrap .container {
   height: 350px !important;
 }
-/* line 35, ../scss/_pages.scss */
-.single-portfolio .image img {
+
+/* line 37, ../scss/_pages.scss */
+.image img {
   height: auto !important;
 }
 @media only all and (max-width: 991px) {
-  /* line 32, ../scss/_pages.scss */
-  .single-portfolio .image {
+  /* line 34, ../scss/_pages.scss */
+  .image {
     width: 100%;
   }
-  /* line 41, ../scss/_pages.scss */
-  .single-portfolio .image img {
+  /* line 43, ../scss/_pages.scss */
+  .image img {
     width: 100% !important;
   }
 }
 
-/* line 48, ../scss/_pages.scss */
+/* line 49, ../scss/_pages.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 52, ../scss/_pages.scss */
+/* line 53, ../scss/_pages.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -843,20 +845,20 @@ code, pre, .highlight {
   } */
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 52, ../scss/_pages.scss */
+  /* line 53, ../scss/_pages.scss */
   .thumbnail {
     min-height: 230px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 52, ../scss/_pages.scss */
+  /* line 53, ../scss/_pages.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 76, ../scss/_pages.scss */
+/* line 77, ../scss/_pages.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -867,27 +869,27 @@ code, pre, .highlight {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 80, ../scss/_pages.scss */
+/* line 81, ../scss/_pages.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 80, ../scss/_pages.scss */
+  /* line 81, ../scss/_pages.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 90, ../scss/_pages.scss */
+/* line 91, ../scss/_pages.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 94, ../scss/_pages.scss */
+/* line 95, ../scss/_pages.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 107, ../scss/_pages.scss */
+  /* line 108, ../scss/_pages.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
