--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,6 +1,7 @@
 /* Nav */
-$masthead_height: 600px;
-$nav_height:      50px;
+$masthead_height:   600px;
+$nav_height:        50px;
+$use_shadows:       false;
 
 /* Body */
 $section_height: 700px;
