--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,7 +115,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.image, .thumbnail .thumb-content {
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -228,7 +228,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.image, .thumbnail .thumb-content {
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -315,7 +315,7 @@ h3 {
 /* line 86, ../scss/_typography.scss */
 h3 {
   font-size: 130%;
-  text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.6);
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.6);
 }
 
 /* line 90, ../scss/_typography.scss */
@@ -367,13 +367,14 @@ p {
   color: #2ea2cc;
 }
 
+/* Contact */
 /* Navbar */
-/* line 13, ../scss/_navbar.scss */
+/* line 22, ../scss/_navbar.scss */
 .navbar-nav {
   margin: 0 0 0 -15px;
 }
 
-/* line 16, ../scss/_navbar.scss */
+/* line 25, ../scss/_navbar.scss */
 #nav-row {
   height: 50px;
   background-color: #000;
@@ -382,40 +383,41 @@ p {
 }
 
 @media only all and (max-width: 767px) {
-  /* line 24, ../scss/_navbar.scss */
+  /* line 33, ../scss/_navbar.scss */
   .nav > li > a {
     padding: 0 0 15px 15px;
   }
 }
+/* line 38, ../scss/_navbar.scss */
+.nav > li > a:hover, .nav > li > a:focus {
+  background-color: transparent;
+}
 
-/* line 30, ../scss/_navbar.scss */
+/* line 43, ../scss/_navbar.scss */
 .navbar {
   margin-bottom: -150px;
   font-family: "Dosis", sans-serif;
   text-transform: uppercase;
 }
-/* line 35, ../scss/_navbar.scss */
+/* line 48, ../scss/_navbar.scss */
 .navbar a {
   font-size: 15px;
   letter-spacing: 3px;
 }
-/* line 39, ../scss/_navbar.scss */
+/* line 52, ../scss/_navbar.scss */
 .navbar a.active {
   color: white !important;
 }
 
-/* line 45, ../scss/_navbar.scss */
+/* line 58, ../scss/_navbar.scss */
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
   background-color: transparent;
 }
 
-/* line 49, ../scss/_navbar.scss */
+/* line 62, ../scss/_navbar.scss */
 .navbar-inverse {
   background-color: black;
   border: 0;
-  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* .navbar-collapse{
@@ -424,53 +426,45 @@ p {
     border-top: 0 !important;
 } */
 /* Buttons */
-/* line 63, ../scss/_navbar.scss */
-.btn-danger {
-  background-color: #d2322d;
-  border-color: #ac2925;
-  -webkit-transition-property: background-color;
-  -moz-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+/* line 78, ../scss/_navbar.scss */
+.btn-primary {
+  background-color: #0074a2;
+  border-color: #0074a2;
+  -webkit-transition: background-color, 0.25s;
+  -moz-transition: background-color, 0.25s;
+  -o-transition: background-color, 0.25s;
+  transition: background-color, 0.25s;
 }
 
-/* line 69, ../scss/_navbar.scss */
-.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
-  background-color: #d64742;
-  border-color: #d43f3a;
-  -webkit-transition-property: background-color;
-  -moz-transition-property: background-color;
-  -o-transition-property: background-color;
-  transition-property: background-color;
-  -webkit-transition-duration: 0.25s;
-  -moz-transition-duration: 0.25s;
-  -o-transition-duration: 0.25s;
-  transition-duration: 0.25s;
+/* line 83, ../scss/_navbar.scss */
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
+  background-color: #2ea2cc;
+  border-color: #2ea2cc;
+  -webkit-transition: background-color, 0.25s;
+  -moz-transition: background-color, 0.25s;
+  -o-transition: background-color, 0.25s;
+  transition: background-color, 0.25s;
 }
 
 /* Affix */
-/* line 77, ../scss/_navbar.scss */
+/* line 90, ../scss/_navbar.scss */
 #home .affix {
   width: 100%;
   top: 0;
 }
 
-/* line 81, ../scss/_navbar.scss */
+/* line 94, ../scss/_navbar.scss */
 #home .affix-top {
   margin-top: -50px;
 }
 @media only all and (max-width: 767px) {
-  /* line 81, ../scss/_navbar.scss */
+  /* line 94, ../scss/_navbar.scss */
   #home .affix-top {
     margin-top: 0;
   }
 }
 
-/* line 89, ../scss/_navbar.scss */
+/* line 102, ../scss/_navbar.scss */
 #standard .affix,
 #standard .affix-top {
   width: 100%;
@@ -479,7 +473,7 @@ p {
 
 /* Responsive: Portrait mobile and below */
 @media screen and (max-width: 768px) {
-  /* line 97, ../scss/_navbar.scss */
+  /* line 110, ../scss/_navbar.scss */
   .affix-top {
     width: 100%;
     position: fixed;
@@ -488,12 +482,12 @@ p {
   }
 
   /* Logo */
-  /* line 104, ../scss/_navbar.scss */
+  /* line 117, ../scss/_navbar.scss */
   .navbar-brand {
     padding-left: 15px;
   }
 
-  /* line 107, ../scss/_navbar.scss */
+  /* line 120, ../scss/_navbar.scss */
   .navbar-collapse {
     background-color: #000;
   }
@@ -526,7 +520,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.image, .thumbnail .thumb-content {
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -735,7 +729,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.image, .thumbnail .thumb-content {
+.thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -771,44 +765,22 @@ code, pre, .highlight {
 }
 
 /* line 21, ../scss/_pages.scss */
-.single-portfolio .wrap {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -175px;
-  margin-left: -585px;
+.single-portfolio .wrap, .main-content-inner .wrap {
   height: 350px;
   padding-top: 0 !important;
 }
-@media only all and (max-width: 1199px) {
-  /* line 21, ../scss/_pages.scss */
-  .single-portfolio .wrap {
-    margin-top: -165px;
-    margin-left: -485px;
-  }
-}
 @media only all and (max-width: 991px) {
   /* line 21, ../scss/_pages.scss */
-  .single-portfolio .wrap {
-    margin-top: auto;
-    margin-left: auto;
-    top: 0;
-    left: 0;
-    position: relative !important;
-  }
-}
-@media only all and (max-width: 991px) {
-  /* line 21, ../scss/_pages.scss */
-  .single-portfolio .wrap {
+  .single-portfolio .wrap, .main-content-inner .wrap {
     padding-top: 180px !important;
   }
 }
 /* line 28, ../scss/_pages.scss */
-.single-portfolio .wrap .container {
+.single-portfolio .wrap .container, .main-content-inner .wrap .container {
   height: 350px !important;
 }
 
-/* line 37, ../scss/_pages.scss */
+/* line 39, ../scss/_pages.scss */
 .image img {
   height: auto !important;
 }
@@ -817,19 +789,19 @@ code, pre, .highlight {
   .image {
     width: 100%;
   }
-  /* line 43, ../scss/_pages.scss */
+  /* line 45, ../scss/_pages.scss */
   .image img {
     width: 100% !important;
   }
 }
 
-/* line 49, ../scss/_pages.scss */
+/* line 51, ../scss/_pages.scss */
 .row-thumbnails {
   margin-left: -15px;
   margin-right: -15px;
 }
 
-/* line 53, ../scss/_pages.scss */
+/* line 55, ../scss/_pages.scss */
 .thumbnail {
   min-height: 285px;
   padding: 0;
@@ -838,27 +810,22 @@ code, pre, .highlight {
   -moz-transition: all, 0s;
   -o-transition: all, 0s;
   transition: all, 0s;
-  /* @include max_tablet{
-      width:          47%;
-      float:          left;
-      margin-bottom:  15px;
-  } */
 }
 @media only all and (min-width: 768px) and (max-width: 991px) {
-  /* line 53, ../scss/_pages.scss */
+  /* line 55, ../scss/_pages.scss */
   .thumbnail {
-    min-height: 230px;
+    min-height: 250px;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 53, ../scss/_pages.scss */
+  /* line 55, ../scss/_pages.scss */
   .thumbnail {
     width: 100%;
     clear: both;
     min-height: 0;
   }
 }
-/* line 77, ../scss/_pages.scss */
+/* line 74, ../scss/_pages.scss */
 .thumbnail h3 {
   -webkit-transition: background-color, 0.5s;
   -moz-transition: background-color, 0.5s;
@@ -869,27 +836,27 @@ code, pre, .highlight {
   -o-transition: padding, 0.5s;
   transition: padding, 0.5s;
 }
-/* line 81, ../scss/_pages.scss */
+/* line 78, ../scss/_pages.scss */
 .thumbnail img {
   height: auto !important;
 }
 @media only all and (max-width: 767px) {
-  /* line 81, ../scss/_pages.scss */
+  /* line 78, ../scss/_pages.scss */
   .thumbnail img {
     width: 100% !important;
   }
 }
-/* line 91, ../scss/_pages.scss */
+/* line 86, ../scss/_pages.scss */
 .thumbnail .thumb-content {
   background-color: black;
 }
-/* line 95, ../scss/_pages.scss */
+/* line 90, ../scss/_pages.scss */
 .thumbnail .caption {
   text-align: center;
   padding: 10px 0 0 0;
 }
 @media only all and (min-width: 768px) {
-  /* line 108, ../scss/_pages.scss */
+  /* line 103, ../scss/_pages.scss */
   .thumbnail:hover h3 {
     background: #0074a2;
     padding-top: 20px;
@@ -908,7 +875,7 @@ code, pre, .highlight {
 body {
   overflow-x: hidden;
   padding-top: 0px;
-  background-color: #666;
+  background-color: #ccc;
   background: url('/wp-content/themes/jn-wpbs/assets/img/bg/stripes.png?1385804855') black;
 }
 
@@ -972,8 +939,13 @@ body {
   padding: 0;
 }
 
+/* line 66, ../scss/custom.scss */
+.width-100 {
+  width: 100%;
+}
+
 /* IE 'browse happy' */
-/* line 68, ../scss/custom.scss */
+/* line 73, ../scss/custom.scss */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -981,11 +953,11 @@ body {
   padding: 0.2em 0;
 }
 
-/* line 75, ../scss/custom.scss */
+/* line 80, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 77, ../scss/custom.scss */
+/* line 82, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
