--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -8,6 +8,15 @@
 .navbar-inverse .navbar-brand {
     color: $cyan;
 }
+
+/* Contact */
+#contact-link {
+    a {
+
+    }
+}
+
+
 /* Navbar */
 
 .navbar-nav {
@@ -24,6 +33,10 @@
 .nav > li > a {
     @include max_tablet{
         padding: 0 0 15px 15px;
+    }
+    &:hover,
+    &:focus {
+        background-color: transparent;
     }
 }
 
@@ -49,7 +62,9 @@
 .navbar-inverse {
     background-color: rgba(black, 1);
     border: 0;
-    @include box-shadow(2px 2px 10px rgba(black, 0.5));
+    @if $use_shadows {
+        @include box-shadow(2px 2px 10px rgba(black, 0.5));
+    }
 }
 /* .navbar-collapse{
     border: 0 !important;
@@ -60,17 +75,15 @@
 
 /* Buttons */
 
-.btn-danger {
-    background-color: $red;
-    border-color: #ac2925;
-    @include transition-property(background-color);
-    @include transition-duration(0.5s);
+.btn-primary {
+    background-color: $blue;
+    border-color: $blue;
+    @include transition(background-color, 0.25s);
 }
-.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active {
-    background-color: lighten($red, 5%);
-    border-color: #d43f3a;
-    @include transition-property(background-color);
-    @include transition-duration(0.25s);
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active {
+    background-color: $cyan; //lighten($red, 5%);
+    border-color: $cyan;
+    @include transition(background-color, 0.25s);
 }
 
 /* Affix */
