--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -115,7 +115,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -228,7 +228,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -418,6 +418,9 @@ p {
 .navbar-inverse {
   background-color: black;
   border: 0;
+  -webkit-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
 }
 
 /* .navbar-collapse{
@@ -520,7 +523,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -729,7 +732,7 @@ code, pre, .highlight {
 }
 
 /* line 56, ../scss/_mixins.scss */
-.thumbnail .thumb-content {
+.image, .thumbnail .thumb-content {
   -webkit-box-shadow: 0px 2px 30px black;
   -moz-box-shadow: 0px 2px 30px black;
   box-shadow: 0px 2px 30px black;
@@ -944,8 +947,30 @@ body {
   width: 100%;
 }
 
+/* line 71, ../scss/custom.scss */
+.mq-list .smartphone {
+  max-width: 5em;
+  width: 7.8125%;
+}
+/* line 75, ../scss/custom.scss */
+.mq-list .tablet {
+  max-width: 12em;
+  width: 18.75%;
+}
+/* line 79, ../scss/custom.scss */
+.mq-list .netbook {
+  max-width: 16em;
+  width: 25%;
+}
+/* line 83, ../scss/custom.scss */
+.mq-list .desktop {
+  margin-right: 0;
+  max-width: 25em;
+  width: 39.0625%;
+}
+
 /* IE 'browse happy' */
-/* line 73, ../scss/custom.scss */
+/* line 91, ../scss/custom.scss */
 .browsehappy {
   margin: 0.2em 0;
   background: #ccc;
@@ -953,11 +978,11 @@ body {
   padding: 0.2em 0;
 }
 
-/* line 80, ../scss/custom.scss */
+/* line 98, ../scss/custom.scss */
 #root-footer, #footer {
   height: 30px;
 }
-/* line 82, ../scss/custom.scss */
+/* line 100, ../scss/custom.scss */
 #root-footer p, #footer p {
   color: #666;
 }
