--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -1,7 +1,7 @@
 /* Nav */
 $masthead_height:   600px;
 $nav_height:        50px;
-$use_shadows:       false;
+$use_shadows:       true;
 
 /* Body */
 $section_height: 700px;
