--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -10,6 +10,7 @@ $section_height: 700px;
 $pad-md: 15px;
 
 /* Colors */
-$red:  #d2322d;
-$blue: #0074a2;
-$cyan: #2ea2cc;
+$red:   #d2322d;
+$blue:  #0074a2;
+$cyan:  #2ea2cc;
+$green: #9ebaa0;
